--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,16 +9,63 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500&display=swap" rel="stylesheet">
     <script>
+        // 사용자가 내용을 올바르게 입력하였는지 확인
+        function isValidContents(contents) {
+            if (contents == '') {
+                alert('내용을 입력해주세요');
+                return false;
+            }
+            if (contents.trim().length > 140) {
+                alert('공백 포함 140자 이하로 입력해주세요');
+                return false;
+            }
+            return true;
+        }
+
+        // 익명의 username 생성
+        function genRandomName(length) {
+            let result = '';
+            let characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+            let charactersLength = characters.length;
+            for (let i = 0; i < length; i++) {
+                let number = Math.random() * charactersLength;
+                let index = Math.floor(number);
+                result += characters.charAt(index);
+            }
+            return result;
+        }
+
+        // 수정 버튼을 눌렀을 떄, 기존 작성 내용을 textarea 에 전달
+        // 숨길 버튼을 숨기고, 나타낼 버튼을 나타냄
+        function editPost(id) {
+            showEdits(id);
+            let contents = $(`#${id}-contents`).text().trim();
+            $(`#${id}-textarea`).val(contents);
+        }
+
+        function showEdits(id) {
+            $(`#${id}-editarea`).show();
+            $(`#${id}-submit`).show();
+            $(`#${id}-delete`).show();
+
+            $(`#${id}-contents`).hide();
+            $(`#${id}-edit`).hide();
+        }
+
         $(document).ready(function () {
+            // HTML 문서를 로드할 때마다 실행
             getMessages();
         })
 
+        // 메모를 불러와서 보여줌
         function getMessages() {
+            // 1. 기존 메모 내용 삭제
             $('#cards-box').empty();
+
+            // 2. 메모 목록을 불러와서 HTML로 붙임
             $.ajax({
-                type: "GET",
-                url: "/api/memos",
-                data: {},
+                type: 'GET',
+                url: '/api/memos',
                 success: function (response) {
                     for (let i = 0; i < response.length; i++) {
                         let message = response[i];
@@ -31,12 +78,16 @@
                 }
             });
         }
-
+        // 메모 하나를 HTML로 만들어서 body 태그 내 원하는 곳에 붙임
         function addHTML(id, username, contents, modifiedAt) {
+            // 1. HTML 태그 생성
             let tempHtml = makeMessage(id, username, contents, modifiedAt);
+
+            // 2. #card-box 에 HTML 붙임
             $('#cards-box').append(tempHtml);
         }
 
+        // HTML 태그 생성 함수
         function makeMessage(id, username, contents, modifiedAt, i) {
             return `<div class="card">
                         <!-- date/username 영역 -->
@@ -66,84 +117,50 @@
                     </div>`;
         }
 
-        function isValidContents(contents) {
-            if (contents == '') {
-                alert('내용을 입력해주세요');
-                return false;
-            }
-            if (contents.trim().length > 140) {
-                alert('공백 포함 140자 이하로 입력해주세요');
-                return false;
-            }
-            return true;
-        }
-
-        function genRandomName(length) {
-            let result = '';
-            let characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-            let charactersLength = characters.length;
-            for (let i = 0; i < length; i++) {
-                let number = Math.random() * charactersLength;
-                let index = Math.floor(number);
-                result += characters.charAt(index);
-            }
-            return result;
-        }
-
+        // 메모 생성
         function writePost() {
+            // 1. 사용자가 작성한 메모를 불러옴
             let contents = $('#contents').val();
 
+            // 2. 작성한 메모가 올바른지 isValidContents 함수를 통해 확인
             if (isValidContents(contents) == false) {
                 return;
             }
 
+            // 3. genRandomName 함수를 통해 익명의 username 생성
             let username = genRandomName(10);
+
+            // 4. 전달할 data를 JSON으로 생성
             let data = {'username': username, 'contents': contents};
 
+            // 5. POST /api/memos 에 data 전달
             $.ajax({
                 type: "POST",
                 url: "/api/memos",
-                contentType: "application/json",
-                data: JSON.stringify(data),
+                contentType: "application/json",    // JSON 형식으로 전달함을 알리기
+                data: JSON.stringify(data), // JSON을 문자열로 만들어줌
                 success: function (response) {
                     alert('메시지가 성공적으로 작성되었습니다.');
-                    window.location.reload();
+                    window.location.reload();   // 화면 새로고침
                 }
             });
         }
 
-        function editPost(id) {
-            showEdits(id);
-            let contents = $(`#${id}-contents`).text().trim();
-            $(`#${id}-textarea`).val(contents);
-        }
-
-        function showEdits(id) {
-            $(`#${id}-editarea`).show();
-            $(`#${id}-submit`).show();
-            $(`#${id}-delete`).show();
-
-            $(`#${id}-contents`).hide();
-            $(`#${id}-edit`).hide();
-        }
-
-        function hideEdits(id) {
-            $(`#${id}-editarea`).hide();
-            $(`#${id}-submit`).hide();
-            $(`#${id}-delete`).hide();
-
-            $(`#${id}-contents`).show();
-            $(`#${id}-edit`).show();
-        }
-
+        // 메모 수정
         function submitEdit(id) {
+            // 1. 작성 대상 메모의 username과 contents 확인
             let username = $(`#${id}-username`).text().trim();
             let contents = $(`#${id}-textarea`).val().trim();
+
+            // 2. 작성한 메모가 올바른지 isValidContents 함수를 통해 확인
             if (isValidContents(contents) == false) {
                 return;
             }
+
+            // 3. 전달한 data 를 JSON 으로 만듦
             let data = {'username': username, 'contents': contents};
 
+            //4. PUT /api/memos/{id} 에 data 전달
             $.ajax({
                 type: "PUT",
                 url: `/api/memos/${id}`,
@@ -156,6 +173,7 @@
             });
         }
 
+        // 메모 삭제
         function deleteOne(id) {
             $.ajax({
                 type: "DELETE",
